@@ -1,5 +1,5 @@
 #!/bin/sh
-#	$Id: img2google,v 1.13 2009-03-31 08:05:27 guru Exp $
+#	$Id: img2google,v 1.14 2009-04-16 02:43:12 guru Exp $
 # Shell script that will generate a Google Earth png tile from
 # Sandwell/Smith's 1x1 min Mercator topo.11.1img grid and add
 # a basic KML wrapper for use in any Google Earth version.
@@ -152,6 +152,7 @@ else
 	name=`echo $G | awk '{print substr($1,3)}'`
 	mv -f $$.ps $name.ps
 fi
+cp $name.ps save.ps
 ps2raster $name.ps -A -E${DPI} -TG -Wg"$KML" $V
 if [ ! "X$Z" = "X" ]; then	# zip up as one archive
 	zip -rq9 $name.kmz $name.kml $name.png
